--- a/index.html
+++ b/index.html
@@ -12,29 +12,29 @@
     <div class="wrapper">
         <div class="calcWrapper">
           <div class="displayWrapper">
-           <input type="text" class="operationDisplay"></input>
-           <input type="text" class="resultDisplay"></input>
+           <input type="text" class="operationDisplay" readonly></input>
+           <input type="text" class="resultDisplay" readonly></input>
           </div>
           <div class="btnsWrapper">
-            <button class="calc-btn">AC</button>
-            <button class="calc-btn">+/-</button>
-            <button class="calc-btn">%</button>
-            <button class="calc-btn lst-col">/</button>
-            <button class="calc-btn">7</button>
-            <button class="calc-btn">8</button>
-            <button class="calc-btn">9</button>
-            <button class="calc-btn lst-col">x</button>
-            <button class="calc-btn">4</button>
-            <button class="calc-btn">5</button>
-            <button class="calc-btn">6</button>
-            <button class="calc-btn lst-col">-</button>
-            <button class="calc-btn">1</button>
-            <button class="calc-btn">2</button>
-            <button class="calc-btn">3</button>
-            <button class="calc-btn lst-col">+</button>
-            <button class="calc-btn big-btn">0</button>
-            <button class="calc-btn">.</button>
-            <button class="calc-btn lst-col">=</button>
+            <button class="calc-btn" value="AC">AC</button>
+            <button class="calc-btn" value="+/-">+/-</button>
+            <button class="calc-btn" value="%">%</button>
+            <button class="calc-btn lst-col" value="/">/</button>
+            <button class="calc-btn" value="7">7</button>
+            <button class="calc-btn" value="8">8</button>
+            <button class="calc-btn" value="9">9</button>
+            <button class="calc-btn lst-col" value="x">x</button>
+            <button class="calc-btn" value="4">4</button>
+            <button class="calc-btn" value="5">5</button>
+            <button class="calc-btn" value="6">6</button>
+            <button class="calc-btn lst-col" value="-">-</button>
+            <button class="calc-btn" value="1">1</button>
+            <button class="calc-btn" value="2">2</button>
+            <button class="calc-btn" value="3">3</button>
+            <button class="calc-btn lst-col" value="+">+</button>
+            <button class="calc-btn big-btn" value="0">0</button>
+            <button class="calc-btn" value=".">.</button>
+            <button class="calc-btn lst-col" value="=">=</button>
           </div>
         </div>   
      </div>
