--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
     <div class="wrapper">
         <div class="calcWrapper">
           <div class="displayWrapper">
-           <input type="text" class="operationDisplay" readonly></input>
-           <input type="text" class="resultDisplay" readonly></input>
+           <input type="text" class="operationDisplay" placeholder="0" readonly></input>
+           <input type="text" class="resultDisplay" placeholder="0" readonly></input>
           </div>
           <div class="btnsWrapper">
             <button class="calc-btn" value="AC">AC</button>
