--- a/index.html
+++ b/index.html
@@ -17,13 +17,13 @@
           </div>
           <div class="btnsWrapper">
             <button class="calc-btn" value="AC">AC</button>
-            <button class="calc-btn" value="+/-">+/-</button>
+            <button class="calc-btn" value="DEL">DEL</button>
             <button class="calc-btn" value="%">%</button>
             <button class="calc-btn lst-col" value="/">/</button>
             <button class="calc-btn" value="7">7</button>
             <button class="calc-btn" value="8">8</button>
             <button class="calc-btn" value="9">9</button>
-            <button class="calc-btn lst-col" value="x">x</button>
+            <button class="calc-btn lst-col" value="*">x</button>
             <button class="calc-btn" value="4">4</button>
             <button class="calc-btn" value="5">5</button>
             <button class="calc-btn" value="6">6</button>
